# selv

./: README.md  examples.py  pyproject.toml  selfie.py  selv.py
.github/workflows/: pr-merge.yml
examples/: basic_tracking.py  change_history.py  custom_actions.py  custom_logger.py  nested_class.py
tests/: test_container_tracking.py  test_core.py  test_custom_actions.py  test_exclude.py
