[project]
name = "selv"
version = "1.0.0"
description = "A Python decorator for logging attribute changes in classes"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "C901"]

[tool.ruff.lint.mccabe]
max-complexity = 8

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.15.1",
]
